Update entity parser tests